feat: upgrade to java 21 and SB 3.2.0-RC2